<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <View
        android:id="@+id/Topo"
        style="@style/topo"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/Principal"
        app:layout_constraintBottom_toBottomOf="@id/Topo"
        app:layout_constraintEnd_toEndOf="@id/Topo"
        app:layout_constraintStart_toStartOf="@id/Topo"
        app:layout_constraintTop_toTopOf="@id/Topo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Topo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <View
            android:id="@+id/container_formulario"
            style="@style/Formulario"
            app:layout_constraintEnd_toStartOf="@id/container_formulario2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/container_formulario3"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/image_formulario"
            style="@style/gestor"
            android:src="@drawable/formo"
            app:layout_constraintBottom_toBottomOf="@id/container_formulario"
            app:layout_constraintEnd_toEndOf="@id/container_formulario"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="@id/container_formulario"
            app:layout_constraintTop_toTopOf="@id/container_formulario"
            app:layout_constraintVertical_bias="0.566" />

        <TextView
            android:id="@+id/texto_formulario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:padding="8dp"
            android:text="@string/form_txt"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="@id/container_formulario"
            app:layout_constraintTop_toTopOf="@id/container_formulario" />

        <View
            android:id="@+id/container_formulario2"
            style="@style/Formulario2"
            app:layout_constraintStart_toEndOf="@id/container_formulario"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/container_formulario4"
            android:layout_margin="8dp" />
        <ImageView
            android:id="@+id/image_formulario2"
            style="@style/gestor"
            android:src="@drawable/alert"
            app:layout_constraintBottom_toBottomOf="@id/container_formulario2"
            app:layout_constraintEnd_toEndOf="@id/container_formulario2"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/container_formulario2"
            app:layout_constraintTop_toTopOf="@id/container_formulario2"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/texto_formulario2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="44dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/avisos_txt"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/container_formulario2"

            app:layout_constraintTop_toTopOf="@id/container_formulario2" />

        <View
            android:id="@+id/container_formulario3"
            style="@style/Formulario"
            app:layout_constraintTop_toBottomOf="@id/container_formulario"
            app:layout_constraintEnd_toStartOf="@id/container_formulario4"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp" />
        <ImageView
            android:id="@+id/image_formulario3"
            style="@style/gestor"
            android:src="@drawable/oni"
            app:layout_constraintBottom_toBottomOf="@id/container_formulario3"
            app:layout_constraintEnd_toEndOf="@id/container_formulario3"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/container_formulario3"
            app:layout_constraintTop_toTopOf="@id/container_formulario3"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/texto_formulario3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="44dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/hora_txt"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/container_formulario3"

            app:layout_constraintTop_toTopOf="@id/container_formulario3" />



        <View
            android:id="@+id/container_formulario4"
            style="@style/Formulario2"
            app:layout_constraintTop_toBottomOf="@id/container_formulario2"
            app:layout_constraintStart_toEndOf="@id/container_formulario3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/image_formulario4"
            style="@style/gestor"
            android:src="@drawable/gestor"
            app:layout_constraintBottom_toBottomOf="@id/container_formulario4"
            app:layout_constraintEnd_toEndOf="@id/container_formulario4"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/container_formulario4"
            app:layout_constraintTop_toTopOf="@id/container_formulario4"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/texto_formulario4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/gestor_txt"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/container_formulario4"
            app:layout_constraintTop_toTopOf="@id/container_formulario4"

            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
